Bug 415601 - Plasma tooltips draw shadows from the dialog svg instead of the tooltip svg
Summary: Plasma tooltips draw shadows from the dialog svg instead of the tooltip svg
Status: RESOLVED FIXED
Alias: None
Product: libplasma
Classification: Frameworks and Libraries
Component: tooltips (other bugs)
Version First Reported In: 5.65.0
Platform: Manjaro Linux
: NOR minor
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-27 10:30 UTC by bigangluvr
Modified: 2024-02-02 22:23 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments
different tooltip style using dialog's shadows (93.93 KB, image/png)
2021-10-03 01:57 UTC, doncbugs
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bigangluvr 2019-12-27 10:30:50 UTC
STEPS TO REPRODUCE
1. Modify Shadow elements in widgets/tooltip.svg to have a different appearance than the shadow elements in dialogs/background.svg either by modifying the svg itself or replacing it with one from another theme 
2. switch o reload the theme to see that tooltips are not drawing their shadow from widgets/tooltip.svg

OBSERVED RESULT
Tooltips do not apply the correct shadow. This is problematic when trying to create a theme where tooltips have a different appearance than dialog windows.

EXPECTED RESULT
Tool tips use shadows from widgets/tooltip.svg

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 5.3.15-1-MANJARO
(available in About System)
KDE Plasma Version: 5.17.4
KDE Frameworks Version: 5.64.0
Qt Version: 5.13.2
Comment 1 Kai Uwe Broulik 2020-01-07 12:09:43 UTC
Can confirm. It uses a shared DialogShadows instance which defaults to dialogs/background.
The frameSvgItem used for the background sets the corret image path but still doesn't work for some reason...
Comment 2 Nate Graham 2021-07-26 15:39:32 UTC
Seems to be fixed now.
Comment 3 doncbugs 2021-10-03 01:51:33 UTC
(In reply to Nate Graham from comment #2)
> Seems to be fixed now.

How did you verify this and why is there no link to any changes?

Reproduced on latest neon unstable 5.23.80.
Comment 4 doncbugs 2021-10-03 01:57:47 UTC
Created attachment 142102 [details]
different tooltip style using dialog's shadows
Comment 5 Bug Janitor Service 2023-12-14 14:46:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1017
Comment 6 David Edmundson 2024-02-02 16:05:04 UTC
Git commit 69fe0b04ce363d750961975140fb96df8cad1b20 by David Edmundson.
Committed on 02/02/2024 at 16:02.
Pushed by davidedmundson into branch 'master'.

Use correct prefix SVG prefix for tooltips

In various porting using the correct prefix for tooltips got lost.

This patch restores that by adding an additional prefix argument to the
constructor of PlasmaWindow and having a separate DialogShadows instance
per SVG prefix.

M  +1    -1    src/declarativeimports/core/tooltipdialog.cpp
M  +2    -2    src/plasmaquick/appletpopup.cpp
M  +1    -1    src/plasmaquick/appletpopup.h
M  +3    -3    src/plasmaquick/dialog.cpp
M  +13   -10   src/plasmaquick/dialogshadows.cpp
M  +3    -3    src/plasmaquick/dialogshadows_p.h
M  +7    -5    src/plasmaquick/plasmawindow.cpp
M  +1    -1    src/plasmaquick/plasmawindow.h
M  +2    -2    src/plasmaquick/popupplasmawindow.cpp
M  +1    -1    src/plasmaquick/popupplasmawindow.h

https://invent.kde.org/plasma/libplasma/-/commit/69fe0b04ce363d750961975140fb96df8cad1b20
Comment 7 Nate Graham 2024-02-02 17:15:39 UTC
Git commit 6d4a706af8b71a57d930e20f0f3d24c6c5d3354c by Nate Graham.
Committed on 02/02/2024 at 17:13.
Pushed by ngraham into branch 'master'.

Revert "Use correct prefix SVG prefix for tooltips"

This reverts commit 69fe0b04ce363d750961975140fb96df8cad1b20.

It broke plasma-workspace compilation; we'll need to try again.

M  +1    -1    src/declarativeimports/core/tooltipdialog.cpp
M  +2    -2    src/plasmaquick/appletpopup.cpp
M  +1    -1    src/plasmaquick/appletpopup.h
M  +3    -3    src/plasmaquick/dialog.cpp
M  +10   -13   src/plasmaquick/dialogshadows.cpp
M  +3    -3    src/plasmaquick/dialogshadows_p.h
M  +5    -7    src/plasmaquick/plasmawindow.cpp
M  +1    -1    src/plasmaquick/plasmawindow.h
M  +2    -2    src/plasmaquick/popupplasmawindow.cpp
M  +1    -1    src/plasmaquick/popupplasmawindow.h

https://invent.kde.org/plasma/libplasma/-/commit/6d4a706af8b71a57d930e20f0f3d24c6c5d3354c
Comment 8 Nate Graham 2024-02-02 17:16:13 UTC
Had to revert since it broke plasma-workspace compilation. Re-opening.
Comment 9 Nate Graham 2024-02-02 18:57:14 UTC
Git commit 3d8fea22963f81d8155299f5efd836e2ad854f2a by Nate Graham.
Committed on 02/02/2024 at 18:55.
Pushed by ngraham into branch 'master'.

Reapply "Use correct prefix SVG prefix for tooltips"

This reverts commit 6d4a706af8b71a57d930e20f0f3d24c6c5d3354c.

The issue this caused in plasma-workspace is now fixed in
https://invent.kde.org/plasma/plasma-workspace/-/commit/d057eb6a07dafef5d993474eb175c9f2bcc437a4
FIXED-IN: 6.0

M  +1    -1    src/declarativeimports/core/tooltipdialog.cpp
M  +2    -2    src/plasmaquick/appletpopup.cpp
M  +1    -1    src/plasmaquick/appletpopup.h
M  +3    -3    src/plasmaquick/dialog.cpp
M  +13   -10   src/plasmaquick/dialogshadows.cpp
M  +3    -3    src/plasmaquick/dialogshadows_p.h
M  +7    -5    src/plasmaquick/plasmawindow.cpp
M  +1    -1    src/plasmaquick/plasmawindow.h
M  +2    -2    src/plasmaquick/popupplasmawindow.cpp
M  +1    -1    src/plasmaquick/popupplasmawindow.h

https://invent.kde.org/plasma/libplasma/-/commit/3d8fea22963f81d8155299f5efd836e2ad854f2a
Comment 10 Nate Graham 2024-02-02 22:23:05 UTC
Git commit 027c7d6af6ae7bb7884566753751e686bf054e18 by Nate Graham, on behalf of David Edmundson.
Committed on 02/02/2024 at 19:22.
Pushed by ngraham into branch 'Plasma/6.0'.

Use correct prefix SVG prefix for tooltips

In various porting using the correct prefix for tooltips got lost.

This patch restores that by adding an additional prefix argument to the
constructor of PlasmaWindow and having a separate DialogShadows instance
per SVG prefix.


(cherry picked from commit 69fe0b04ce363d750961975140fb96df8cad1b20)

M  +1    -1    src/declarativeimports/core/tooltipdialog.cpp
M  +2    -2    src/plasmaquick/appletpopup.cpp
M  +1    -1    src/plasmaquick/appletpopup.h
M  +3    -3    src/plasmaquick/dialog.cpp
M  +13   -10   src/plasmaquick/dialogshadows.cpp
M  +3    -3    src/plasmaquick/dialogshadows_p.h
M  +7    -5    src/plasmaquick/plasmawindow.cpp
M  +1    -1    src/plasmaquick/plasmawindow.h
M  +2    -2    src/plasmaquick/popupplasmawindow.cpp
M  +1    -1    src/plasmaquick/popupplasmawindow.h

https://invent.kde.org/plasma/libplasma/-/commit/027c7d6af6ae7bb7884566753751e686bf054e18