Use correct prefix SVG prefix for tooltips

In various porting using the correct prefix for tooltips got lost.

This patch restores that by adding an additional prefix argument to the
constructor of PlasmaWindow and having a separate DialogShadows instance
per SVG prefix.

BUG: 415601