src/plasmaquick/dialog.cpp
@@ -237,7 +237,7 @@ void DialogPrivate::updateTheme()
         KWindowEffects::enableBlurBehind(q, false);
         KWindowEffects::enableBackgroundContrast(q, false);
         q->setMask(QRegion());
-        DialogShadows::self()->removeWindow(q);
+        DialogShadows::instance()->removeWindow(q);
     } else {
         auto prefix = QStringLiteral("");
         if ((backgroundHints & Dialog::SolidBackground) == Dialog::SolidBackground) {
@@ -269,7 +269,7 @@ void DialogPrivate::updateTheme()
             q->setMask(dialogBackground->mask());
         }
         if (q->isVisible()) {
-            DialogShadows::self()->addWindow(q, dialogBackground->enabledBorders());
+            DialogShadows::instance()->addWindow(q, dialogBackground->enabledBorders());
         }
     }
     updateInputShape();
@@ -1386,7 +1386,7 @@ void Dialog::showEvent(QShowEvent *event)
     d->updateSizeFromAppletInterface();
 
     if (d->backgroundHints != Dialog::NoBackground) {
-        DialogShadows::self()->addWindow(this, d->dialogBackground->enabledBorders());
+        DialogShadows::instance()->addWindow(this, d->dialogBackground->enabledBorders());
     }
 
     if (KWindowSystem::isPlatformX11()) {
