src/plasmaquick/plasmawindow.h
@@ -54,7 +54,7 @@ public:
     };
     Q_ENUM(BackgroundHints)
 
-    PlasmaWindow(QWindow *parent = nullptr);
+    PlasmaWindow(const QString &svgPrefix = QStringLiteral("dialogs/background"));
     ~PlasmaWindow() override;
 
     /**
